--- a/backend/src/main/resources/static/how-it-works.html
+++ b/backend/src/main/resources/static/how-it-works.html
@@ -18,24 +18,24 @@
 <body>
     <nav class="navbar glass-panel">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="logo.jpg" alt="Nutzy Craft Logo" class="logo-img">
                 Nutzy Craft
             </a>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="how-it-works.html" style="color: var(--primary);">How it Works</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="/">Home</a>
+                <a href="/services">Services</a>
+                <a href="/portfolio">Portfolio</a>
+                <a href="/how-it-works" style="color: var(--primary);">How it Works</a>
+                <a href="/about">About Us</a>
+                <a href="/contact">Contact Us</a>
             </div>
             <div class="nav-actions">
-                <a href="login.html" class="btn btn-secondary">Log In</a>
-                <a href="register.html" class="btn btn-primary">Join Now</a>
+                <a href="/login" class="btn btn-secondary">Log In</a>
+                <a href="/register" class="btn btn-primary">Join Now</a>
             </div>
             <button class="mobile-menu-btn"><i class="fa-solid fa-bars"></i></button>
-            </div>
+        </div>
         </div>
     </nav>
 
@@ -170,7 +170,7 @@
                         goes unrealized.
                     </p>
                     <br>
-                    <a href="about.html" style="color: var(--primary); font-weight: 700;">Read More <i
+                    <a href="/about" style="color: var(--primary); font-weight: 700;">Read More <i
                             class="fa-solid fa-arrow-right"></i></a>
                 </div>
 
@@ -179,12 +179,14 @@
                     <h3 class="footer-heading">QUICK LINKS</h3>
                     <div class="footer-line"></div>
                     <ul class="footer-service-list">
-                        <li><a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="how-it-works.html">How It Works</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="legal.html">Terms & Privacy</a></li>
+                        <li><a href="/services">Services</a>
+                            <a href="/portfolio">Portfolio</a>
+                        </li>
+                        <li><a href="/pricing">Pricing</a></li>
+                        <li><a href="/portfolio">Portfolio</a></li>
+                        <li><a href="/how-it-works">How It Works</a></li>
+                        <li><a href="/contact">Contact Us</a></li>
+                        <li><a href="/legal">Terms & Privacy</a></li>
                     </ul>
                 </div>
 
