--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -31,16 +31,16 @@
                 Nutzy Craft
             </a>
             <div class="nav-links">
-                <a href="index.html" style="color: var(--primary);">Home</a>
-                <a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="how-it-works.html">How it Works</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="/" style="color: var(--primary);">Home</a>
+                <a href="/services">Services</a>
+                <a href="/portfolio">Portfolio</a>
+                <a href="/how-it-works">How it Works</a>
+                <a href="/about">About Us</a>
+                <a href="/contact">Contact Us</a>
             </div>
             <div class="nav-actions">
-                <a href="login.html" class="btn btn-secondary">Log In</a>
-                <a href="register.html" class="btn btn-primary">Join Now</a>
+                <a href="/login" class="btn btn-secondary">Log In</a>
+                <a href="/register" class="btn btn-primary">Join Now</a>
             </div>
             <button class="mobile-menu-btn"><i class="fa-solid fa-bars"></i></button>
         </div>
@@ -57,9 +57,9 @@
                     expert developers, designers, and tech talent. Scale your business with quality assurance and secure
                     workflows.</p>
                 <div class="hero-actions">
-                    <a href="post-job.html" class="btn btn-primary btn-lg">Hire Talent <i
+                    <a href="/register?role=client" class="btn btn-primary btn-lg">Hire Talent <i
                             class="fa-solid fa-briefcase"></i></a>
-                    <a href="register-freelancer.html" class="btn btn-outline btn-lg">Join as a Freelancer <i
+                    <a href="/register-freelancer" class="btn btn-outline btn-lg">Join as a Freelancer <i
                             class="fa-solid fa-user-plus"></i></a>
                 </div>
 
@@ -152,11 +152,11 @@
                     </div>
                     <h3>Custom IT Solutions</h3>
                     <p class="text-muted">Tailored technology for unique needs.</p>
-                    <a href="services.html" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="/services" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
             <div style="text-align: center; margin-top: 40px;">
-                <a href="services.html" class="btn btn-secondary">View All Services</a>
+                <a href="/services" class="btn btn-secondary">View All Services</a>
             </div>
         </div>
     </section>
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div style="text-align: center; margin-top: 40px;">
-                <a href="how-it-works.html" class="btn btn-secondary">See Full Process</a>
+                <a href="/how-it-works" class="btn btn-secondary">See Full Process</a>
             </div>
         </div>
     </section>
@@ -233,12 +233,12 @@
             <div class="cta-box client-box glass-card">
                 <h3>For Clients</h3>
                 <p>Hire faster, safer, and smarter with our vetted network.</p>
-                <a href="post-job.html" class="btn btn-secondary">Start Your Project</a>
+                <a href="/post-job" class="btn btn-secondary">Start Your Project</a>
             </div>
             <div class="cta-box freelancer-box glass-card">
                 <h3>For Freelancers</h3>
                 <p>Earn, grow, and scale your career with premium projects.</p>
-                <a href="register.html" class="btn btn-primary">Join as Expert</a>
+                <a href="/register" class="btn btn-primary">Join as Expert</a>
             </div>
         </div>
 
@@ -314,7 +314,7 @@
                             goes unrealized.
                         </p>
                         <br>
-                        <a href="about.html" style="color: var(--primary); font-weight: 700;">Read More <i
+                        <a href="/about" style="color: var(--primary); font-weight: 700;">Read More <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
 
@@ -323,14 +323,14 @@
                         <h3 class="footer-heading">QUICK LINKS</h3>
                         <div class="footer-line"></div>
                         <ul class="footer-service-list">
-                            <li><a href="services.html">Services</a>
-                                <a href="portfolio.html">Portfolio</a>
+                            <li><a href="/services">Services</a>
+                                <a href="/portfolio">Portfolio</a>
                             </li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="how-it-works.html">How It Works</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="legal.html">Terms & Privacy</a></li>
-                            <li><a href="admin-login.html" style="color: #666; font-size: 0.85rem;"><i
+                            <li><a href="/portfolio">Portfolio</a></li>
+                            <li><a href="/how-it-works">How It Works</a></li>
+                            <li><a href="/contact">Contact Us</a></li>
+                            <li><a href="/legal">Terms & Privacy</a></li>
+                            <li><a href="/admin-login" style="color: #666; font-size: 0.85rem;"><i
                                         class="fa-solid fa-lock"></i> Admin Login</a></li>
                         </ul>
                     </div>
