--- a/backend/src/main/resources/static/services.html
+++ b/backend/src/main/resources/static/services.html
@@ -23,19 +23,19 @@
                 Nutzy Craft
             </a>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="services.html" style="color: var(--primary);">Services</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="how-it-works.html">How it Works</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="/">Home</a>
+                <a href="/services" style="color: var(--primary);">Services</a>
+                <a href="/portfolio">Portfolio</a>
+                <a href="/how-it-works">How it Works</a>
+                <a href="/about">About Us</a>
+                <a href="/contact">Contact Us</a>
             </div>
             <div class="nav-actions">
-                <a href="login.html" class="btn btn-secondary">Log In</a>
-                <a href="register.html" class="btn btn-primary">Join Now</a>
+                <a href="/login" class="btn btn-secondary">Log In</a>
+                <a href="/register" class="btn btn-primary">Join Now</a>
             </div>
             <button class="mobile-menu-btn"><i class="fa-solid fa-bars"></i></button>
-            </div>
+        </div>
         </div>
     </nav>
 
@@ -58,13 +58,8 @@
                 <div class="service-detail-card">
                     <span class="service-badge">Most Popular</span>
                     <h3>Web Development</h3>
-                    <p>Custom websites, e-commerce platforms, and web applications built with modern technologies like
-                        React, Vue, and Spring Boot.</p>
-                    <br>
-                    <strong>Who it's for:</strong> Startups, SMEs, and Brands needing a strong online presence.
-                    <br><br>
-                    <a href="post-job.html" class="learn-more">Hire Web Developers <i
-                            class="fa-solid fa-arrow-right"></i></a>
+                    <p>Custom websites, web apps, and CMS solutions.</p>
+                    <a href="/post-job" class="btn btn-outline btn-sm">Post Web Job</a>
                 </div>
 
                 <!-- Software & System -->
@@ -97,12 +92,8 @@
                 <div class="service-detail-card">
                     <span class="service-badge">Mobile</span>
                     <h3>Mobile App Development</h3>
-                    <p>Native (iOS/Android) and cross-platform (Flutter/React Native) mobile applications.</p>
-                    <br>
-                    <strong>Who it's for:</strong> Businesses reaching customers on their smartphones.
-                    <br><br>
-                    <a href="post-job.html" class="learn-more">Hire App Developers <i
-                            class="fa-solid fa-arrow-right"></i></a>
+                    <p>Native and cross-platform mobile applications.</p>
+                    <a href="/post-job" class="btn btn-outline btn-sm">Post Mobile Job</a>
                 </div>
 
                 <!-- API & Backend -->
@@ -137,8 +128,7 @@
                     <br>
                     <strong>Who it's for:</strong> Innovators pushing the boundaries of technology.
                     <br><br>
-                    <a href="post-job.html" class="learn-more">Consult Experts <i
-                            class="fa-solid fa-arrow-right"></i></a>
+                    <a href="/post-job" class="learn-more">Consult Experts <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
 
             </div>
@@ -161,7 +151,7 @@
                         goes unrealized.
                     </p>
                     <br>
-                    <a href="about.html" style="color: var(--primary); font-weight: 700;">Read More <i
+                    <a href="/about" style="color: var(--primary); font-weight: 700;">Read More <i
                             class="fa-solid fa-arrow-right"></i></a>
                 </div>
 
@@ -170,12 +160,14 @@
                     <h3 class="footer-heading">QUICK LINKS</h3>
                     <div class="footer-line"></div>
                     <ul class="footer-service-list">
-                        <li><a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="how-it-works.html">How It Works</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="legal.html">Terms & Privacy</a></li>
+                        <li><a href="/services">Services</a>
+                            <a href="/portfolio">Portfolio</a>
+                        </li>
+                        <li><a href="/pricing">Pricing</a></li>
+                        <li><a href="/portfolio">Portfolio</a></li>
+                        <li><a href="/how-it-works">How It Works</a></li>
+                        <li><a href="/contact">Contact Us</a></li>
+                        <li><a href="/legal">Terms & Privacy</a></li>
                     </ul>
                 </div>
 
