--- a/backend/src/main/resources/static/admin-login.html
+++ b/backend/src/main/resources/static/admin-login.html
@@ -134,7 +134,7 @@
     <div class="split-container">
         <!-- Left Side: Auth Form -->
         <div class="auth-side">
-            <a href="index.html" class="admin-nav-logo">
+            <a href="/" class="admin-nav-logo">
                 <img src="logo.jpg" alt="Logo" style="width: 32px; border-radius: 50%;">
                 Nutzy Admin
             </a>
@@ -165,8 +165,7 @@
             </form>
 
             <p style="margin-top: 20px; text-align: center; color: #666; font-size: 0.95rem;">
-                Don't have an account? <a href="admin-register.html"
-                    style="color: #1a237e; font-weight: 700;">Register</a>
+                Don't have an account? <a href="/admin-register" style="color: #1a237e; font-weight: 700;">Register</a>
             </p>
 
             <p style="margin-top: 20px; text-align: center; color: #999; font-size: 0.9rem;">
