--- a/backend/src/main/resources/static/legal.html
+++ b/backend/src/main/resources/static/legal.html
@@ -18,21 +18,21 @@
 <body>
     <nav class="navbar glass-panel">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="logo.jpg" alt="Nutzy Craft Logo" class="logo-img">
                 Nutzy Craft
             </a>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="how-it-works.html">How it Works</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="/">Home</a>
+                <a href="/services">Services</a>
+                <a href="/portfolio">Portfolio</a>
+                <a href="/how-it-works">How it Works</a>
+                <a href="/about">About Us</a>
+                <a href="/contact">Contact Us</a>
             </div>
             <div class="nav-actions">
-                <a href="login.html" class="btn btn-secondary">Log In</a>
-                <a href="register.html" class="btn btn-primary">Join Now</a>
+                <a href="/login" class="btn btn-secondary">Log In</a>
+                <a href="/register" class="btn btn-primary">Join Now</a>
             </div>
             <button class="mobile-menu-btn"><i class="fa-solid fa-bars"></i></button>
         </div>
