--- a/backend/src/main/resources/static/pricing.html
+++ b/backend/src/main/resources/static/pricing.html
@@ -23,19 +23,19 @@
                 Nutzy Craft
             </a>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="how-it-works.html">How it Works</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="/">Home</a>
+                <a href="/services">Services</a>
+                <a href="/portfolio">Portfolio</a>
+                <a href="/how-it-works">How it Works</a>
+                <a href="/about">About Us</a>
+                <a href="/contact">Contact Us</a>
             </div>
             <div class="nav-actions">
-                <a href="login.html" class="btn btn-secondary">Log In</a>
-                <a href="register.html" class="btn btn-primary">Join Now</a>
+                <a href="/login" class="btn btn-secondary">Log In</a>
+                <a href="/register" class="btn btn-primary">Join Now</a>
             </div>
             <button class="mobile-menu-btn"><i class="fa-solid fa-bars"></i></button>
-            </div>
+        </div>
         </div>
     </nav>
 
@@ -72,7 +72,7 @@
                         <li style="margin-bottom: 15px;"><i class="fa-solid fa-check"
                                 style="color: var(--primary);"></i> 3% Platform Fee</li>
                     </ul>
-                    <a href="register.html" class="btn btn-outline" style="width: 100%; margin-top: 20px;">Join
+                    <a href="/register" class="btn btn-outline" style="width: 100%; margin-top: 20px;">Join
                         Platform</a>
                 </div>
 
@@ -97,7 +97,7 @@
                         <li style="margin-bottom: 15px;"><i class="fa-solid fa-check"
                                 style="color: var(--primary);"></i> Full IP Transfer</li>
                     </ul>
-                    <a href="contact.html" class="btn btn-primary" style="width: 100%; margin-top: 20px;">Get a
+                    <a href="/contact" class="btn btn-primary" style="width: 100%; margin-top: 20px;">Get a
                         Quote</a>
                 </div>
 
@@ -120,7 +120,7 @@
                         <li style="margin-bottom: 15px;"><i class="fa-solid fa-check"
                                 style="color: var(--primary);"></i> Daily Standups</li>
                     </ul>
-                    <a href="contact.html" class="btn btn-outline" style="width: 100%; margin-top: 20px;">Contact
+                    <a href="/contact" class="btn btn-outline" style="width: 100%; margin-top: 20px;">Contact
                         Sales</a>
                 </div>
 
